Thu Jun 16 07:38:57 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* ace/Process.cpp (running): Only try to "kill" a process if
	  the PID is valid.  Thanks to Howard Finer <hfiner at sonusnet
 	  dot com> for contributing this.

	* ace/Pipe.h (ACE_Pipe): Updated the documentation for this class
	  to clarify why it uses sockets on Windows.  Thanks to Dave
 	  Varnell <Dave.Varvell@ni.com> for prompting this.

	* ace/INET_Addr.cpp (set): Changed the test of
	
	  if (port_number < 0)
	  
	  to 
	  
	  if (port_number == -1)
	  
	  to fix problems reported by Vemund Handeland
 	  <vemund.handeland@fantoft.no>

Wed Jun 15 12:36:04 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * bin/PerlACE/Run_Test.pm:

          Adding method to add a library path dynamically for the run test
          scripts.

Wed Jun 15 17:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/bor.mpd:
          reverse the libs, this solves a lot of problems in our static builds.

Wed Jun 15 07:46:16 2005  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/rules.bin.GNU:

          Resurrected rules.bin.GNU as it may be required by old
          hand-written makefiles.

Wed Jun 15 07:36:14 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/bor.mpd:

          Removed the use of uniq for libpaths.  This was a work-around for
          a bug in MPC which has been fixed.

Wed Jun 15 11:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/bor.mpd:
          Removed reverse, with this no static initializers where called

Wed Jun 15 09:48:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/bor.mpd:
          Use uniq for libpaths so that we don't generate things twice

Wed Jun 15 09:06:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/bor.mpd: