@@ -1,5 +1,10 @@
 Thu Jun 16 07:38:57 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>
 
+	* ace/SOCK_Stream.cpp (close): Removed the call to this->close_writer()
+	  since that functionality was done by ACE_SOCK::close(), which
+ 	  delegates to ACE_OS::closesocket(), which handles this
+ 	  automatically.
+
 	* ace/Process.cpp (running): Only try to "kill" a process if
 	  the PID is valid.  Thanks to Howard Finer <hfiner at sonusnet
  	  dot com> for contributing this.
